# advent-2025

./: .gitignore  1.rs  10.rs  11.rs  12.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs  Cargo.toml  README.md  shared.rs
