[package]
name = "advent-2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "1"
path = "./1.rs"

[[bin]]
name = "2"
path = "./2.rs"

[[bin]]
name = "3"
path = "./3.rs"

[[bin]]
name = "4"
path = "./4.rs"

[[bin]]
name = "5"
path = "./5.rs"

[dependencies]
anyhow = "1.0.100"
