[package]
name = "advent-2025"
version = "0.1.0"
edition = "2024"

[lib]
name = "shared"
path = "./shared.rs"

[[bin]]
name = "1"
path = "./1.rs"

[[bin]]
name = "2"
path = "./2.rs"

[[bin]]
name = "3"
path = "./3.rs"

[[bin]]
name = "4"
path = "./4.rs"

[[bin]]
name = "5"
path = "./5.rs"

[[bin]]
name = "6"
path = "./6.rs"

[[bin]]
name = "7"
path = "./7.rs"

[[bin]]
name = "8"
path = "./8.rs"

[[bin]]
name = "9"
path = "./9.rs"

[[bin]]
name = "10"
path = "./10.rs"

[[bin]]
name = "11"
path = "./11.rs"

[dependencies]
anyhow = "1.0.100"

[dependencies.good_lp]
version = "1.14.2"
default-features = false
features = ["microlp"]
